[project]
name = "pypssfss"
version = "0.1.0"
description = "Python wrapper for Julia package PSSFSS - Analysis of Polarization and Frequency Selective Surfaces"
readme = "README.md"
authors = [
    { name = "Peter Simon", email = "psimon0420@gmail.com" }
]
keywords = [
    "python",
    "Julia",
    "PSSFSS",
    "FSS",
    "Frequency Selective Surface",
    "Polarization Selective Surface",
    "metasurface",
    "electromagnetics",
    "computational electromagnetics",
    "RF",
    "antenna",
    "microwave"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "juliacall~=0.9.24",
    "juliapkg~=0.1.16",
    "matplotlib~=3.9",
    "numpy~=2.0",
    "rich~=14.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "myst-nb>=1.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "twine>=6.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
